# Detector

./: CMakeLists.txt  README.md  main.cc  run1.mac  vis.mac
include/: B1DetectorConstruction.hh  B1EventAction.hh  B1RunAction.hh
src/: B1DetectorConstruction.cc  B1EventAction.cc  B1RunAction.cc  B1SteppingAction.cc
